# underwriting-copilot

./: README.md
underwriting-copilot/softmax-underwriting-copilot/: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY_FRONTEND.md  DEPLOY_PRODUCTION.md  Dockerfile.api  Dockerfile.worker  OTEL_FIX_SUMMARY.md  README.md  README_CREDENTIALS.md  START_API_SERVER.sh  docker-compose.yaml  normalized_output.json  pyproject.toml  requirements.txt  simulation_results.json  simulation_results.md  test_bank_parser.py
underwriting-copilot/softmax-underwriting-copilot/.github/workflows/: ci.yaml
underwriting-copilot/softmax-underwriting-copilot/app/: __init__.py  config.py  db.py  logging.py  main.py  metrics.py  models.py  observability.py  openapi.yaml  schemas.py  security.py
underwriting-copilot/softmax-underwriting-copilot/docs/: assistant_reference.md  bank_data_submission_guide.md  observability.md  underwriting_gospel.md
underwriting-copilot/softmax-underwriting-copilot/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
underwriting-copilot/softmax-underwriting-copilot/k8s/: api-deployment.yaml  postgres.yaml  redis.yaml  worker-deployment.yaml
underwriting-copilot/softmax-underwriting-copilot/mockdata/: Creditbureaumock.json  LoanApplicant_001.json  LoanApplicant_002.json  LoanApplicant_003.json  LoanApplicant_004.json  LoanApplicant_005.json  SocialInsurancemock.json  api_submission_example.json  loanrequest.json
underwriting-copilot/softmax-underwriting-copilot/scripts/: bootstrap_db.sh  create_tenant.py  gen_hmac_secret.py  load_test.py  run_azure_underwriting_simulation.py  run_gemini_underwriting_simulation.py  run_simulations.py
underwriting-copilot/softmax-underwriting-copilot/tests/: conftest.py
(+90 files in other folders)
